--- a/clase_1/index.html
+++ b/clase_1/index.html
@@ -5,6 +5,7 @@
 	<script src="../clase_1/clase1.js"></script>
 </head>
 <body>
-
+	<a onclick="imprimir()" href="#">2</a>
+<input type="button" name="imprimir" value="Imprimir" onclick="window.print();">
 </body>
 </html>
