--- a/clase_1/index.html
+++ b/clase_1/index.html
@@ -4,8 +4,12 @@
 	<title>practica 1</title>
 	<script src="../clase_1/clase1.js"></script>
 </head>
-<body>
+<body onload="maximizar()">
+	
 	<a onclick="imprimir()" href="#">2</a>
+	<a onclick="maximizar()" href="#" >maximizar</a>
 <input type="button" name="imprimir" value="Imprimir" onclick="window.print();">
+
+</script>
 </body>
 </html>
